fix typo, update ga.js

--- a/report/index.html
+++ b/report/index.html
@@ -51,7 +51,7 @@
           <li><strong>Operating System</strong></li>
           <li>Were you using the Online or Offline version?</li>
         </ul>
-        <p>We want to make sure that GSR functions properly for everyone, so we greatly appreciate your report and will try to resolve your issue as soon as humanly possible!</p>
+        <p>We want to make sure that PDT functions properly for everyone, so we greatly appreciate your report and will try to resolve your issue as soon as humanly possible!</p>
       </div>
       
       <div class="content-block">
